# ganca

./: .gitignore  CMakeLists.txt  README.md
.srcArchive/example/: CMakeLists.txt
.srcArchive/helpers/: helpers.i
AOIHit/: CMakeLists.txt
AOIHit/include/aoihit/: AOIHit.hpp
AOIHit/python/: CMakeLists.txt  aoihit.i
AOIHit/src/: AOIHit.cpp
AOIHit/tests/: aoihit_test.cpp
FixationFilter/: CMakeLists.txt
FixationFilter/include/fixationfilter/: FixationFilter.hpp
FixationFilter/python/: CMakeLists.txt  fixationfilter.i
FixationFilter/src/: FixationFilter.cpp
FixationFilter/tests/: fixationfilter_test.cpp
Heatmap/: CMakeLists.txt
Heatmap/include/heatmap/: Heatmap.hpp
Heatmap/python/: CMakeLists.txt  heatmap.i
Heatmap/src/: Heatmap.cpp
Heatmap/tests/: heatmapTest.cpp
Helper/: CMakeLists.txt
Helper/include/helper/: Helper.hpp
Helper/python/: CMakeLists.txt  helper.i
Helper/src/: Helper.cpp
Helper/tests/: CMakeLists.txt  helper_test.cpp
cmake/: cpp.cmake  csvparser.cmake  gancaConfig.cmake.in  opencv.cmake  python.cmake  swig.cmake
docs/: ganca0.0_alpha.md
gaze_path/: gazePath.hpp
heatMap/: CMakeLists.txt
heatMap/include/: heatmap.hpp
heatMap/src/: heatmap.cpp
python/: setup.py.in
python_test/: add_path.py  foo.py  py_test_func.py  test_aoihit.ipynb  test_example copy.ipynb  test_example.ipynb  test_example.py  test_fixationfilter.ipynb  test_heatmap.ipynb  test_helper.ipynb  test_helpers.ipynb
src/: CMakeLists.txt  aoiHit.hpp  example.cpp  heatmap.hpp  helpers.cpp  helpers.h  helpers.hpp  helpers.i
srcArchive/heatmap/: heatmap.hpp
srcArchive/helpers/: CMakeLists.txt
test/: CMakeLists.txt  gazePathTest.cpp  heatmapTest  heatmapTest.cpp  timeseriesTest.cpp
test/outdata/: .Rhistory  render_heatmap.Rmd
test_data/: aka_fixation.csv  aka_timeseries.csv  clip_out_stim.Rmd  midori_fixation.csv  midori_timeseries.csv
test_data/raw_data/: TobiiLog.csv  allfixations.txt  messages.csv  notifications.csv  sessionInfo.csv
