cmake_minimum_required(VERSION 3.15)
project(ganca CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED True)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

FIND_PACKAGE(SWIG REQUIRED)
INCLUDE(${SWIG_USE_FILE})
SET(CMAKE_SWIG_FLAGS "") # option for swig command

# python
FIND_PACKAGE(PythonLibs)
INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})

SET_SOURCE_FILES_PROPERTIES(example.i PROPERTIES CPLUSPLUS ON)
SET_SOURCE_FILES_PROPERTIES(example.i PROPERTIES SWIG_FLAGS "-includeall")

# python
SWIG_ADD_LIBRARY(example LANGUAGE python SOURCES example.i example.cpp)
SWIG_LINK_LIBRARIES(example ${PYTHON_LIBRARIES})

SET_SOURCE_FILES_PROPERTIES(helpers.i PROPERTIES CPLUSPLUS ON)
SET_SOURCE_FILES_PROPERTIES(helpers.i PROPERTIES SWIG_FLAGS "-includeall")

# python
SWIG_ADD_LIBRARY(helpers LANGUAGE python SOURCES helpers.i helpers.h)
SWIG_LINK_LIBRARIES(helpers ${PYTHON_LIBRARIES})